--- a/development.ini
+++ b/development.ini
@@ -28,15 +28,8 @@ retry.attempts = 3
 ###
 
 [server:main]
-#use = egg:waitress#main
-#listen = localhost:6543
-use = egg:gunicorn#main
-bind = 0.0.0.0:6543
-workers = 1
-preload = true
-reload = true
-accesslog = -
-loglevel = debug
+use = egg:waitress#main
+listen = localhost:6543
 
 ###
 # logging configuration
